<resources>
    <string name="app_name">OICAR-Project</string>
    <string name="email">Email address</string>
    <string name="enter_username">Enter email address</string>
    <string name="password">Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="string_title">Title</string>
    <string name="string_description">Description</string>
    <string name="string_Location">Location</string>
    <string name="string_tools">Tools</string>
    <string name="string_employer">Employer/Employee</string>
    <string name="log_out">Log out</string>
    <string name="settings">Settings</string>
    <string name="payment">Payment</string>
    <string name="your_jobs">Your jobs</string>
    <string name="last_nameProfile">Last Name</string>
    <string name="name_Profile">Name</string>
    <string name="title_Item">Title</string>
    <string name="description_Item">Description</string>
    <string name="location_Item">Location</string>
    <string name="name_SignUp">Name</string>
    <string name="first_name_SignUp">First name</string>
    <string name="last_name_SignUp">Last Name</string>
    <string name="email_SignUp">Email</string>
    <string name="email_hint">name@example.com</string>
    <string name="password_hint">At least 5 characters</string>
    <string name="btn_SignUp">SIGN UP</string>
    <string name="enter_type_hint">Enter type</string>
    <string name="description_hint">Enter description</string>
    <string name="enter_title_hint">Enter title</string>
    <string name="enter_address_hint">Enter address</string>
    <string name="add_job_hint">Add job</string>
    <string name="edit_profile">Edit profile</string>
    <string name="first_name_Edit">First name</string>
    <string name="last_name_edit">Last name</string>
    <string name="phone_number_edit">Phone number</string>
    <string name="email_address_edit">Email address</string>
    <string name="password_edit">Password</string>
    <string name="mobile_phone_SignUp">Mobile Phone</string>
    <string name="mobile_phone_hint">Enter mobile phone</string>
    <string name="work_type">Work type</string>
    <string name="enter_location">Enter location</string>
    <string name="tools">I have my own tools</string>
    <string name="employer">I am employer</string>
    <string name="categories">Categories</string>
    <string name="title_activity_user_jobs">UserJobsActivity</string>
    <string name="your_jobs_title">Your jobs</string>
    <string name="string_price">Offered price (HRK)</string>
    <string name="enter_price">Enter price</string>
    <string name="make_offer_hint">Make an offer</string>
    <string name="user_offers">Your offers</string>
    <string name="rate">Rate</string>
    <string name="additional_info">Additional info</string>
    <string name="rate_employer">Rate employer</string>
    <string name="_0">0</string>
</resources>
