<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity">



    <TextView
        android:id="@+id/tvFirstName"
        android:textColor="@android:color/holo_green_dark"
        android:text="@string/name_SignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="64dp"
        />
    <EditText
        android:id="@+id/txtFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/first_name_SignUp"
        android:ems="7"
        android:textColorHint="@android:color/black"
        app:layout_constraintStart_toStartOf="@id/tvFirstName"
        app:layout_constraintTop_toBottomOf="@id/tvFirstName"
        android:layout_marginTop="8dp"
        />

    <EditText
        android:id="@+id/txtLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:hint="@string/last_name_SignUp"
        android:textColorHint="@android:color/black"
        android:ems="7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/txtFirstName"
        app:layout_constraintTop_toBottomOf="@+id/tvFirstName" />

    <TextView
        android:id="@+id/tvMobilePhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtFirstName"
        android:text="@string/mobile_phone_SignUp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/holo_green_dark"
        />

    <EditText
        android:id="@+id/txtMobilePhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginRight="32dp"
        android:layout_marginLeft="32dp"
        android:hint="@string/mobile_phone_hint"
        android:textColorHint="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/tvMobilePhone"
        app:layout_constraintTop_toBottomOf="@+id/tvMobilePhone" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_SignUp"
        android:textColor="@android:color/holo_green_dark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtMobilePhone"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        android:textColorHint="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tvEmail"
        app:layout_constraintTop_toBottomOf="@+id/tvEmail"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"/>

    <TextView
        android:id="@+id/tvPasswordSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:layout_marginLeft="32dp"
        android:textColor="@android:color/holo_green_dark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail"
        android:layout_marginTop="8dp"/>

    <EditText
        android:id="@+id/txtPasswordSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:inputType="textPassword"
        android:hint="@string/password_hint"
        android:textColorHint="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tvPasswordSignUp"
        app:layout_constraintTop_toBottomOf="@+id/tvPasswordSignUp" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:backgroundTint="@android:color/holo_green_dark"
        android:text="@string/btn_SignUp"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPasswordSignUp" />

</androidx.constraintlayout.widget.ConstraintLayout>