<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OfferActivity">

    <TextView
        android:id="@+id/tvPrice"
        android:text="@string/string_price"
        android:textColor="@android:color/holo_green_dark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="@dimen/details_textSize"
        android:layout_margin="16dp"/>

    <EditText
        android:id="@+id/txtPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_price"
        android:textColorHint="@android:color/black"
        app:layout_constraintStart_toStartOf="@+id/tvPrice"
        app:layout_constraintTop_toBottomOf="@+id/tvPrice"
        android:inputType="numberDecimal"
        android:textSize="@dimen/details_textSize"
        android:layout_margin="16dp"/>

    <TextView
        android:id="@+id/tvHasTools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_tools"
        android:textColor="@android:color/holo_green_dark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtPrice"
        android:textSize="@dimen/details_textSize"
        android:layout_margin="16dp"/>

    <CheckBox
        android:id="@+id/cbHasTools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/tools"
        android:textColorHint="@android:color/black"
        app:layout_constraintStart_toStartOf="@+id/tvHasTools"
        app:layout_constraintTop_toBottomOf="@+id/tvHasTools"
        android:textSize="18dp"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/btnMakeAnOffer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@android:color/holo_green_dark"
        android:text="@string/make_offer_hint"
        android:textColor="@android:color/white"
        android:textSize="@dimen/details_textSize"
        android:layout_margin="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>