<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="15sp">

    <TextView android:text="@string/rate_employer"
        android:id="@+id/lblTitle"
        android:textSize="24dp"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_green_dark"
        android:layout_gravity="center"/>

    <RatingBar
        android:layout_marginTop="10dp" android:layout_marginBottom="10dp"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:clickable="true"
        android:id="@+id/ratingBar" android:layout_gravity="center"
        android:numStars="5" android:stepSize="0.5" android:rating="5"
        android:isIndicator="false"/>

    <TextView
        android:id="@+id/tvPrice"
        android:text="@string/additional_info"
        android:textColor="@android:color/holo_green_dark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/details_textSize"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/txtNotes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/details_textSize"
        android:layout_gravity="center"/>

    <Button android:id="@+id/btnRank"
        android:layout_height="wrap_content"
        android:text="@string/rate"
        android:focusable="false"
        android:layout_margin="5dip"
        android:background="@android:color/holo_green_dark"
        android:textColor="@android:color/white"
        android:textSize="@dimen/details_textSize"
        android:layout_width="fill_parent" />

</LinearLayout>
